[package]
name = "rust_rest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.160"
serde_json = "1.0.96"
tokio = { version = "1.28.0", features = ["full"] }
uuid = "1.3.1"
warp = "0.3.5"
